タスクの閲覧・作成の実装 (#15)
* feat: implement GetTask

* chore: fix typo

* feat: add list tasks

* feat: add gen mock

* feat: add bearer token

* fix: req type

* feat: add security handler

* fix: error msg

* fix: task if

* fix: remove status

* feat: di

* feat: create task

* feat: implement get and list
